[package]
name = "toast_notifications"
version = "0.1.0"
authors = ["batram <ym@batr.am>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = { version = "0.6.0", features = ["windows-data", "windows-ui"] }
state = { version = "0.2", features = ["tls"] }